Closed
Bug 1195878
Opened 10 years ago
Closed 10 years ago
A large GIF on slow network with an invalid frame delay on the first frame will flicker black till it loads completely
Categories
(Core :: Graphics: ImageLib, defect)
Tracking
()
RESOLVED
FIXED
mozilla44
Tracking | Status | |
---|---|---|
firefox42 | --- | unaffected |
firefox43 | + | fixed |
firefox44 | --- | fixed |
People
(Reporter: mayankleoboy1, Assigned: seth)
References
Details
(Keywords: regression, Whiteboard: [gfx-noted])
Attachments
(2 files, 1 obsolete file)
11.41 KB,
text/plain
|
Details | |
6.26 KB,
patch
|
lizzard
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; WOW64; rv:43.0) Gecko/20100101 Firefox/43.0
Build ID: 20150818030209
Steps to reproduce:
1.Take a slow intenet connection. 50KB/s-100KB/s should repro this beautifully.
2. Take a large GIF image : http://ctho.org/tmp/graphics/raytracer/movie/out.gif
3. Open the URL
3. Open the URL
Actual results:
Till the GIF loads completely, the GIF will violently flicker black.
Expected results:
Probably shouldnt.
Reporter | ||
Comment 1•10 years ago
|
||
the flicker doesnt start till the image gets loaded verticlly. This could initially take 3-4 seconds, before the black flicker starts.
Updated•10 years ago
|
Keywords: regressionwindow-wanted
![]() |
||
Comment 2•10 years ago
|
||
Reproduced, ADSL 12M
https://hg.mozilla.org/mozilla-central/rev/90d9b7c391d38ae118865bd87b5d011feee6dded
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:43.0) Gecko/20100101 Firefox/43.0 ID:20150818030209
Pushlog:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=54d0fc9946067a995cc49326fd3861303cd1f105&tochange=c035b63e1b81
Regressed by: Bug 1194059
Blocks: 1194059
Status: UNCONFIRMED → NEW
status-firefox42:
--- → unaffected
status-firefox43:
--- → affected
Ever confirmed: true
Flags: needinfo?(seth)
Keywords: regressionwindow-wanted → regression
Version: Trunk → 43 Branch
Assignee | ||
Comment 3•10 years ago
|
||
Thanks for the regression range, Alice0775. Investigating.
Flags: needinfo?(seth)
Assignee | ||
Comment 4•10 years ago
|
||
So this GIF has a zero frame delay on the first frame, despite being animated. That causes us to hit the RecoverFromInvalidFrames() fallback case in RasterImage::FinalizeDecoder(). Presumably something is going wrong during the recovery attempt.
Summary: A large GIF on slow network will flicker black till it loads completely → A large GIF on slow network with an invalid frame delay on the first frame will flicker black till it loads completely
Assignee | ||
Comment 5•10 years ago
|
||
Hmm, I bet the reason the slow network is relevant is that RecoverFromInvalidFrames() fails to do a sync decode, because we had enough data to decode the header of the second frame and discover the animation, but not enough data to complete the decode of the entire image synchronously.
I can definitely see that wreaking some havoc, because it means that we'll set RasterImage::mHasBeenDecoded to |true| before the image actually gets decoded completely, and that probably ends up breaking all sorts of stuff.
We need to handle this recovery in a more robust way, clearly.
Comment 6•10 years ago
|
||
[Tracking Requested - why for this release]: Flickering regression
tracking-firefox43:
--- → ?
Updated•10 years ago
|
Whiteboard: [gfx-noted]
Updated•10 years ago
|
Assignee | ||
Comment 7•10 years ago
|
||
This ended up in 43, so the fix will need to be uplifted.
Assignee | ||
Comment 8•10 years ago
|
||
Here's the patch. The crucial difference is that when we detect that we need to
drop all surfaces and recover, we drop the results of the full decode on the
floor, so that we don't end up setting |mHasBeenDecoded| to true and telling
observers that the image has been fully decoded.
In local testing this corrects the problem.
Attachment #8665181 -
Flags: review?(tnikkel)
Assignee | ||
Updated•10 years ago
|
Assignee: nobody → seth
Status: NEW → ASSIGNED
Assignee | ||
Comment 9•10 years ago
|
||
Comment 10•10 years ago
|
||
Comment on attachment 8665181 [details] [diff] [review]
If we detect animation during a full decode, drop the results of the full decode on the floor
>+ bool metadataOK = SetMetadata(aDecoder->GetImageMetadata(), wasMetadata);
>+ if (!metadataOK) {
>+ // This indicates a serious error that requires us to discard all existing
>+ // surfaces and redecode to recover. We'll drop the results from this
>+ // decoder on the floor, since they aren't valid.
>+ aDecoder->TakeProgress();
>+ aDecoder->TakeInvalidRect();
>+ RecoverFromInvalidFrames(mSize, DECODE_FLAGS_DEFAULT);
>+ return;
>+ }
Hmm, shouldn't we be using the decode flags that the (old) Decoder has set when calling RecoverFromInvalidFrames?
Attachment #8665181 -
Flags: review?(tnikkel) → review+
Assignee | ||
Comment 11•10 years ago
|
||
(In reply to Timothy Nikkel (:tn) from comment #10)
> Hmm, shouldn't we be using the decode flags that the (old) Decoder has set
> when calling RecoverFromInvalidFrames?
Yeah, that seems like a good idea. I'll update the patch.
Assignee | ||
Comment 12•10 years ago
|
||
This version of the patch uses the same surface flags as the old decoder for the
new decoder.
Assignee | ||
Updated•10 years ago
|
Attachment #8665181 -
Attachment is obsolete: true
Assignee | ||
Comment 13•10 years ago
|
||
Assignee | ||
Comment 14•10 years ago
|
||
That try job looks good to me. Seems like service workers are having a rough time right now...
Assignee | ||
Updated•10 years ago
|
Keywords: checkin-needed
Comment 15•10 years ago
|
||
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
status-firefox44:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
Assignee | ||
Comment 17•10 years ago
|
||
Comment on attachment 8665188 [details] [diff] [review]
If we detect animation during a full decode, drop the results of the full decode on the floor
Approval Request Comment
[Feature/regressing bug #]: 1194059
[User impact if declined]: Extremely ugly flickering while animated GIFs load from the network.
[Describe test coverage new/current, TreeHerder]: Not clear how to write a test for this. =( On m-c.
[Risks and why]: Pretty low risk, especially at this point in the cycle. The change here is not conceptually very big.
[String/UUID change made/needed]: None.
Attachment #8665188 -
Flags: approval-mozilla-aurora?
Comment 18•10 years ago
|
||
Comment on attachment 8665188 [details] [diff] [review]
If we detect animation during a full decode, drop the results of the full decode on the floor
Good to catch this early! Approved for uplift
Attachment #8665188 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 19•10 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•