Bug 1195878 - If we detect animation during a full decode, drop the results of the full decode on the floor. r=tn